# kapsl-sdk

./: Cargo.toml  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-python-package.yml
crates/kapsl-backends/: Cargo.toml
crates/kapsl-backends/src/: engine_pool.rs  engine_pool_tests.rs  factory.rs  factory_tests.rs  gguf_native.rs  lib.rs  native.rs  native_hotswap_tests.rs  onnx.rs  onnx_tests.rs
crates/kapsl-core/: Cargo.toml
crates/kapsl-core/src/: auto_scaler.rs  auto_scaler_tests.rs  lib.rs  loader.rs  loader_tests.rs  model_registry.rs  model_registry_tests.rs  requirements.rs  requirements_tests.rs
crates/kapsl-engine-api/: Cargo.toml
crates/kapsl-engine-api/src/: lib.rs
crates/kapsl-hal/: Cargo.toml
crates/kapsl-hal/examples/: device_mesh_example.rs
crates/kapsl-hal/src/: device.rs  device_mesh.rs  device_mest_tests.rs  device_tests.rs  distributed_ops.rs  gpu_arena.rs  gpu_tensor.rs  kernel.rs  kernel_tests.rs  lib.rs  mock_comm.rs  nccl_comm.rs  tensor.rs  tensor_tests.rs
crates/kapsl-ipc/: Cargo.toml
crates/kapsl-ipc/examples/: benchmark_inference.rs  deepseek_client.rs  simple_client.rs  token_client.rs
crates/kapsl-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs  tcp_server.rs
crates/kapsl-kernels/: Cargo.toml
crates/kapsl-kernels/src/: backend.rs  lib.rs
crates/kapsl-kernels/src/attention/: cuda.rs  mod.rs
crates/kapsl-kernels/src/mlp/: mod.rs
crates/kapsl-llm/: Cargo.toml
crates/kapsl-llm/src/: block_manager.rs  block_manager_tests.rs  engine.rs  engine_tests.rs  gguf_backend.rs  global_scheduler.rs  kv_cache.rs  kv_cache_tests.rs  lib.rs  llm_backend.rs  llm_backend_tests.rs  llm_metrics.rs  model_paths.rs  model_paths_tests.rs  radix_tree.rs  rag.rs  rag_tests.rs  scheduler.rs  scheduler_tests.rs  sequence.rs  sequence_tests.rs
crates/kapsl-loader/: Cargo.toml
crates/kapsl-loader/src/: config.rs  gguf_loader.rs  lib.rs  loader.rs  weights.rs
crates/kapsl-monitor/: Cargo.toml
crates/kapsl-monitor/src/: metrics.rs  middleware.rs
crates/kapsl-optimizer/: Cargo.toml  README.md
crates/kapsl-optimizer/src/: config.rs  error.rs  graph.rs  lib.rs  optimizer.rs
crates/kapsl-optimizer/src/passes/: constant_folding.rs  dead_code.rs  fusion.rs  mod.rs
crates/kapsl-pyo3/: Cargo.toml  README.md  pyproject.toml
crates/kapsl-pyo3/kapsl_sdk/: __init__.py
crates/kapsl-pyo3/src/: hybrid_client.rs  lib.rs  shm_client.rs
crates/kapsl-quantization/: Cargo.toml
crates/kapsl-quantization/src/: config.rs  kv_cache.rs  lib.rs  quantizer.rs  tensor.rs
crates/kapsl-quantization/src/loader/: awq.rs  gptq.rs  int8.rs  mod.rs
crates/kapsl-rag/: Cargo.toml
crates/kapsl-rag-sdk/: Cargo.toml
crates/kapsl-rag-sdk/examples/: echo.rag-extension.toml  echo.rs
crates/kapsl-rag-sdk/src/: lib.rs  manifest.rs  protocol.rs  server.rs  types.rs
crates/kapsl-rag/src/: lib.rs
crates/kapsl-rag/src/extension/: mod.rs
crates/kapsl-rag/src/ingestion/: mod.rs
crates/kapsl-rag/src/runtime/: mod.rs
crates/kapsl-rag/src/storage/: mod.rs
crates/kapsl-rag/src/vector/: mod.rs
crates/kapsl-scheduler/: Cargo.toml
crates/kapsl-scheduler/benches/: cron_scheduler.rs
crates/kapsl-scheduler/src/: cron_scheduler.rs  gpu_executor.rs  lib.rs  mesh_routing.rs  priority.rs  replica_pool.rs  request.rs  request_metadata.rs  request_metadata_tests.rs  scheduler.rs  scheduler_tests.rs
crates/kapsl-shm/: Cargo.toml
crates/kapsl-shm/src/: allocator.rs  allocator_tests.rs  lib.rs  memory.rs  memory_tests.rs  ring_buffer.rs  ring_buffer_tests.rs  server.rs  server_tests.rs
crates/kapsl-transport/: Cargo.toml
crates/kapsl-transport/src/: connection_pool.rs  connection_pool_tests.rs  lib.rs  tcp.rs
docs/: PYTHON_SDK_TRANSPORT_ROADMAP.md  api-reference.md  authentication.md  client-types.md  index.md  inference.md  installation.md  quickstart.md  streaming.md  tts-voices.md
patches/esaxx-rs/: build.rs
