[workspace]
members = [
    "crates/kapsl-backends",
    "crates/kapsl-core",
    "crates/kapsl-engine-api",
    "crates/kapsl-hal",
    "crates/kapsl-ipc",
    "crates/kapsl-kernels",
    "crates/kapsl-llm",
    "crates/kapsl-loader",
    "crates/kapsl-monitor",
    "crates/kapsl-optimizer",
    "crates/kapsl-pyo3",
    "crates/kapsl-quantization",
    "crates/kapsl-rag",
    "crates/kapsl-rag-sdk",
    "crates/kapsl-scheduler",
    "crates/kapsl-shm",
    "crates/kapsl-transport",
]
default-members = [
    "crates/kapsl-backends",
    "crates/kapsl-core",
    "crates/kapsl-engine-api",
    "crates/kapsl-hal",
    "crates/kapsl-ipc",
    "crates/kapsl-kernels",
    "crates/kapsl-llm",
    "crates/kapsl-loader",
    "crates/kapsl-monitor",
    "crates/kapsl-optimizer",
    "crates/kapsl-quantization",
    "crates/kapsl-rag",
    "crates/kapsl-rag-sdk",
    "crates/kapsl-scheduler",
    "crates/kapsl-shm",
    "crates/kapsl-transport",
]

resolver = "2"

[patch.crates-io]
# Patch esaxx-rs to use dynamic CRT (/MD) on Windows MSVC, matching llama-cpp-sys-2.
# Without this, the linker fails with LNK2038 (RuntimeLibrary mismatch).
esaxx-rs = { path = "patches/esaxx-rs" }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kapsl-runtime/kapsl-sdk"
