[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kapsl-sdk"
version = "0.1.16"
description = "Python client SDK for kapsl-runtime with IPC, shared-memory, and hybrid inference transports"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
keywords = ["inference", "llm", "machine-learning", "ai", "python-sdk", "kapsl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://kapsl.ai"
Repository = "https://github.com/kapsl-runtime/kapsl-sdk"
Issues = "https://github.com/kapsl-runtime/kapsl-sdk/issues"

[tool.maturin.env]
PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1"

[tool.maturin]
manifest-path = "crates/kapsl-pyo3/Cargo.toml"
module-name = "kapsl_sdk.kapsl_sdk"
python-packages = ["crates/kapsl-pyo3/kapsl_sdk"]
features = ["pyo3/extension-module"]
include = ["crates/kapsl-pyo3/kapsl_sdk/*.bin", "patches/**/*", "LICENSE", "NOTICE"]
