[package]
name = "kapsl-backends"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pluggable inference backends (ONNX, llama.cpp) for the Kapsl engine"

[dependencies]
kapsl-core = { version = "0.1.0", path = "../kapsl-core" }
kapsl-engine-api = { version = "0.1.0", path = "../kapsl-engine-api" }
kapsl-hal = { version = "0.1.0", path = "../kapsl-hal" }
kapsl-llm = { version = "0.1.0", path = "../kapsl-llm", features = ["gguf"] }
half = "2.0"
thiserror = "1.0"
log = "0.4"
lru = "0.12"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
futures = "0.3"
ndarray = "0.17"
async-trait = "0.1.89"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
ort = { version = "=2.0.0-rc.11", features = ["download-binaries", "directml", "cuda", "tensorrt", "rocm", "coreml", "openvino", "half", "ndarray"] }

[target.'cfg(not(windows))'.dependencies]
ort = { version = "=2.0.0-rc.11", features = ["download-binaries", "cuda", "tensorrt", "rocm", "coreml", "openvino", "half", "ndarray"] }
