[package]
name = "kapsl-engine-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core API traits and types for the Kapsl inference engine"

[dependencies]
thiserror = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.89"
base64 = "0.22"

[dev-dependencies]
serde_json = "1.0"
