[package]
name = "kapsl-hal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hardware abstraction layer for CPU, CUDA, and ROCm devices in Kapsl"

[dependencies]
sys-info = "0.9"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
half = "2.0"
log = "0.4"
cudarc = { version = "0.12", optional = true }
nvml-wrapper = { version = "0.10", optional = true }

[features]
default = []
cuda = ["dep:cudarc"]
cublas = ["cuda", "cudarc/cublas"]
nvrtc = ["cuda", "cudarc/nvrtc"]
nccl = ["cuda", "cudarc/nccl"]
nvml = ["dep:nvml-wrapper"]
