[package]
name = "kapsl-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
kapsl-engine-api = { path = "../kapsl-engine-api" }
kapsl-scheduler = { path = "../kapsl-scheduler" }
kapsl-transport = { path = "../kapsl-transport" }
kapsl-shm = { path = "../kapsl-shm" }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
log = "0.4"
