[package]
name = "kapsl-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Inter-process communication protocol for Kapsl engine clients"

[dependencies]
kapsl-engine-api = { version = "0.1.0", path = "../kapsl-engine-api" }
kapsl-scheduler = { version = "0.1.0", path = "../kapsl-scheduler" }
kapsl-transport = { version = "0.1.0", path = "../kapsl-transport" }
kapsl-shm = { version = "0.1.0", path = "../kapsl-shm" }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
log = "0.4"
