[package]
name = "kapsl-kernels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Compute kernels for matrix operations and attention in Kapsl"

[dependencies]
kapsl-hal = { version = "0.1.0", path = "../kapsl-hal" }
thiserror = "1.0"
log = "0.4"
rayon = "1.11.0"

[features]
cuda = []
rocm = []
