[package]
name = "kapsl-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Large language model inference with GGUF and ONNX backend support for Kapsl"

[dependencies]
kapsl-core = { version = "0.1.0", path = "../kapsl-core" }
kapsl-engine-api = { version = "0.1.0", path = "../kapsl-engine-api" }
kapsl-quantization = { version = "0.1.0", path = "../kapsl-quantization" }
kapsl-kernels = { version = "0.1.0", path = "../kapsl-kernels" }
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.4", features = ["v4"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
kapsl-hal = { version = "0.1.0", path = "../kapsl-hal" }
futures = "0.3"
async-stream = "0.3"
tokenizers = "0.20"
ndarray = "0.17"
serde_json = "1.0"
half = "2.1"
async-trait = "0.1.89"

[target.'cfg(windows)'.dependencies]
ort = { version = "=2.0.0-rc.11", features = ["ndarray", "half", "download-binaries", "directml", "cuda", "tensorrt", "rocm", "coreml", "openvino"] }

[target.'cfg(not(windows))'.dependencies]
ort = { version = "=2.0.0-rc.11", features = ["ndarray", "half", "download-binaries", "cuda", "tensorrt", "rocm", "coreml", "openvino"] }

[features]
default = ["gguf"]
gguf = ["dep:llama-cpp-2"]

[target.'cfg(target_os = "macos")'.dependencies.llama-cpp-2]
version = "0.1"
optional = true
features = ["metal"]

[target.'cfg(not(target_os = "macos"))'.dependencies.llama-cpp-2]
version = "0.1"
optional = true
features = ["cuda"]

[dev-dependencies]
env_logger = "0.10"
