[package]
name = "kapsl-monitor"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Prometheus metrics and monitoring for the Kapsl inference engine"

[dependencies]
kapsl-engine-api = { version = "0.1.0", path = "../kapsl-engine-api" }
prometheus = "0.14"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3.31"
