[package]
name = "kapsl-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
kapsl-core = { path = "../kapsl-core" }
kapsl-engine-api = { path = "../kapsl-engine-api" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

[dev-dependencies]
tempfile = "3.0"
