[package]
name = "kapsl-optimizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Inference optimization strategies and graph transformations for Kapsl"

[dependencies]
kapsl-core = { version = "0.1.0", path = "../kapsl-core" }
kapsl-engine-api = { version = "0.1.0", path = "../kapsl-engine-api" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

[dev-dependencies]
tempfile = "3.0"
