[package]
name = "kapsl-pyo3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for the Kapsl inference engine"
publish = false

[lib]
name = "kapsl_sdk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
kapsl-ipc = { path = "../kapsl-ipc" }
kapsl-engine-api = { path = "../kapsl-engine-api" }
kapsl-shm = { path = "../kapsl-shm" }
kapsl-transport = { path = "../kapsl-transport" }
libc = "0.2"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
