[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kapsl-runtime"
version = "0.1.0"
description = "Python SDK for kapsl-runtime — high-performance inference engine"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
keywords = ["inference", "llm", "machine-learning", "kapsl"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://kapsl.ai"

[tool.maturin]
module-name = "kapsl_runtime.kapsl_runtime"
python-packages = ["kapsl_runtime"]
features = ["pyo3/extension-module"]
