[package]
name = "kapsl-quantization"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model weight quantization formats and conversion utilities for Kapsl"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.3"
thiserror = "1.0"
half = { version = "2.3", features = ["serde"] }
log = "0.4"
anyhow = "1.0"
turboquant_rs = { package = "turboquant-rs", version = "0.3.1" }
