[package]
name = "kapsl-rag-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Retrieval-augmented generation SDK traits and types for Kapsl"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
