[package]
name = "kapsl-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Request scheduling and batching for the Kapsl inference engine"

[dependencies]
kapsl-engine-api = { version = "0.1.0", path = "../kapsl-engine-api" }
kapsl-core = { version = "0.1.0", path = "../kapsl-core" }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
parking_lot = "0.12"
rayon = "1.11.0"
async-trait = "0.1"
futures = "0.3.31"
kapsl-hal = { version = "0.1.0", path = "../kapsl-hal" }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
cron = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

[[bench]]
name = "cron_scheduler"
harness = false
