[package]
name = "kapsl-shm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared memory transport for high-throughput inter-process tensor transfer in Kapsl"

[dependencies]
kapsl-transport = { version = "0.1.0", path = "../kapsl-transport" }
kapsl-engine-api = { version = "0.1.0", path = "../kapsl-engine-api" }
kapsl-scheduler = { version = "0.1.0", path = "../kapsl-scheduler" }
shared_memory = "0.12"
memmap2 = "0.9"
crossbeam = "0.8"
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
log = "0.4"
thiserror = "1.0"
libc = "0.2"
prometheus = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
