[package]
name = "kapsl-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Async transport layer for inter-process communication in Kapsl"

[dependencies]
kapsl-engine-api = { version = "0.1.0", path = "../kapsl-engine-api" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "net", "io-util", "rt", "macros", "time"] }
log = "0.4"
bincode = "1.3"

[features]
streaming = []
